Fix horizontal scroll on collections page

--- a/src/app/collections/collections.module.css
+++ b/src/app/collections/collections.module.css
@@ -1,11 +1,8 @@
 
 .wrapper{
-    /* margin: 0 auto; */
+    margin: 0 auto;
     padding: 1rem;
     width: 100%;
-    justify-self: center;
-    align-self: center;
-
 }
 
 .header{
@@ -21,7 +18,6 @@
     align-items: center;
     justify-content: center;
     grid-template-columns: 1fr;
-    /* width: 100%; */
     max-width: 1400px;
     margin: 0 auto;
 }
